--- a/web.config
+++ b/web.config
@@ -50,12 +50,12 @@
             處理的錯誤時所要執行的動作。具體來說， 
             它可以讓開發人員設定要顯示的 HTML 錯誤 
             網頁，以取代錯誤堆疊追蹤。
-
-        <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
+ -->
+        <customErrors mode="Off" defaultRedirect="GenericErrorPage.htm">
             <error statusCode="403" redirect="NoAccess.htm" />
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
-        -->
+       
     <pages>
       <controls>
         <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
