--- a/web.config
+++ b/web.config
@@ -30,7 +30,7 @@
             影響效能，所以只有在開發期間才能將 
             這個值設定為 true。
         -->
-    <compilation debug="true">
+    <compilation>
       <assemblies>
         <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
         <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
