--- a/web.config
+++ b/web.config
@@ -27,7 +27,7 @@
             使用的安全性驗證模式， 
             以識別連入的使用者。 
         -->
-    <authentication mode="Windows"/>
+    <authentication mode="None"/>
     <!--
             <customErrors> 區段可以用來設定 
             在執行要求期間若發生未 
