--- a/reviewweb/Web.config
+++ b/reviewweb/Web.config
@@ -12,19 +12,8 @@
       ASP.NET 用來識別連入使用者的 
       安全性驗證模式。 
     -->
-    <authentication mode="Windows" />
-    <!--
-       <customErrors> 區段可讓您設定
-       當執行要求期間發生無法處理
-       之錯誤時的處理方式。更明確地說，
-       開發人員可以利用它設定要顯示的 
-       html 錯誤頁面，以取代錯誤堆疊追蹤。
--->
-       <customErrors mode="Off" defaultRedirect="GenericErrorPage.htm">
-         <error statusCode="403" redirect="NoAccess.htm" />
-         <error statusCode="404" redirect="FileNotFound.htm" />
-       </customErrors>
-    
+    <authentication mode="None" />
+
     </system.web>
 
 </configuration>
