--- a/Web.config
+++ b/Web.config
@@ -1,14 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請造訪
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
+  <!--
+    如需 web.config 變更的說明，請參閱 http://go.microsoft.com/fwlink/?LinkId=235367。
 
-    <system.web>
-      <compilation debug="true" targetFramework="4.0" />
-    </system.web>
-
+    您可以在 <httpRuntime> 標記上設定下列屬性。
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.5"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
+  </system.web>
 </configuration>
