--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- 如需使用 web.config 轉換的詳細資訊，請造訪 http://go.microsoft.com/fwlink/?LinkId=125889 -->
-
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <!--
     在下面的範例中，"SetAttributes" 轉換只會在 "Match" 定位程式找到
