--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請造訪
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -13,7 +13,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <compilation debug="true" targetFramework="4.5" />
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
 </configuration>
