--- a/reviewportal/reviewportal.csproj
+++ b/reviewportal/reviewportal.csproj
@@ -88,6 +88,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="acct.aspx" />
+    <Content Include="default.aspx" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -103,7 +105,21 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="acct.aspx.cs">
+      <DependentUpon>acct.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="acct.aspx.designer.cs">
+      <DependentUpon>acct.aspx</DependentUpon>
+    </Compile>
     <Compile Include="dbentity.cs" />
+    <Compile Include="default.aspx.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="default.aspx.designer.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="review.aspx.cs">
       <DependentUpon>review.aspx</DependentUpon>
