--- a/reviewportal/reviewportal.csproj
+++ b/reviewportal/reviewportal.csproj
@@ -160,9 +160,11 @@
     <Content Include="Content\themes\base\tooltip.css" />
     <Content Include="default.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="jquery-ui.css" />
+    <Content Include="CSS\jquery-ui.css" />
     <Content Include="packages.config" />
     <None Include="Scripts\jquery-3.1.0.intellisense.js" />
+    <Content Include="Scripts\1.10.3\jquery-1.8.2.js" />
+    <Content Include="Scripts\1.10.3\jquery-ui.js" />
     <Content Include="Scripts\jquery-3.1.0.js" />
     <Content Include="Scripts\jquery-3.1.0.min.js" />
     <Content Include="Scripts\jquery-3.1.0.slim.js" />
