--- a/reviewportal/packages.config
+++ b/reviewportal/packages.config
@@ -6,6 +6,10 @@
   <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.zh-Hant" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
@@ -15,4 +19,5 @@
   <package id="MongoDB.Bson" version="2.2.4" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.2.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
 </packages>
