--- a/reviewportal/reviewportal.csproj
+++ b/reviewportal/reviewportal.csproj
@@ -175,6 +175,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="CSS\jquery.dataTables.min.css" />
     <Content Include="default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="CSS\jquery-ui.css" />
@@ -199,6 +200,7 @@
     <Content Include="review.aspx" />
     <Content Include="Scripts\jquery-ui-1.12.0.js" />
     <Content Include="Scripts\jquery-ui-1.12.0.min.js" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -224,6 +226,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Module\rvService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="review.aspx.cs">
       <DependentUpon>review.aspx</DependentUpon>
