--- a/reviewportal/reviewportal.csproj
+++ b/reviewportal/reviewportal.csproj
@@ -175,20 +175,24 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
-    <Content Include="CSS\jquery.dataTables.min.css" />
     <Content Include="default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="CSS\jquery-ui.css" />
+    <Content Include="images\arrow-left.png" />
+    <Content Include="images\arrow-right.png" />
+    <Content Include="images\bg_hr.png" />
+    <Content Include="images\blacktocat.png" />
+    <Content Include="images\icon_download.png" />
+    <Content Include="images\search.png" />
+    <Content Include="images\sprite_download.png" />
     <Content Include="packages.config" />
-    <None Include="Scripts\jquery-3.1.0.intellisense.js" />
+    <Content Include="CSS\classic.css" />
+    <Content Include="review .html" />
     <Content Include="Scripts\1.10.3\jquery-1.8.2.js" />
     <Content Include="Scripts\1.10.3\jquery-ui.js" />
-    <Content Include="Scripts\jquery-3.1.0.js" />
-    <Content Include="Scripts\jquery-3.1.0.min.js" />
-    <Content Include="Scripts\jquery-3.1.0.slim.js" />
-    <Content Include="Scripts\jquery-3.1.0.slim.min.js" />
-    <Content Include="Scripts\jquery-3.1.0.slim.min.map" />
-    <Content Include="Scripts\jquery-3.1.0.min.map" />
+    <Content Include="Scripts\columns\jquery.columns.js" />
+    <Content Include="Scripts\columns\mustache.js" />
+    <Content Include="Scripts\columns\mustache.min.js" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -197,10 +201,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="review.aspx" />
-    <Content Include="Scripts\jquery-ui-1.12.0.js" />
-    <Content Include="Scripts\jquery-ui-1.12.0.min.js" />
-    <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -228,13 +228,6 @@
     </Compile>
     <Compile Include="Module\rvService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="review.aspx.cs">
-      <DependentUpon>review.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="review.aspx.designer.cs">
-      <DependentUpon>review.aspx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
