--- a/reviewportal/reviewportal.csproj
+++ b/reviewportal/reviewportal.csproj
@@ -175,6 +175,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="CSS\clean.css" />
     <Content Include="default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="CSS\jquery-ui.css" />
