--- a/reviewportal/reviewportal.csproj
+++ b/reviewportal/reviewportal.csproj
@@ -190,8 +190,10 @@
     <Content Include="CSS\classic.css" />
     <Content Include="review.html" />
     <Content Include="Scripts\1.10.3\jquery-1.8.2.js" />
+    <Content Include="Scripts\1.10.3\jquery-1.8.2.min.js" />
     <Content Include="Scripts\1.10.3\jquery-ui.js" />
     <Content Include="Scripts\columns\jquery.columns.js" />
+    <Content Include="Scripts\columns\jquery.columns.min.js" />
     <Content Include="Scripts\columns\mustache.js" />
     <Content Include="Scripts\columns\mustache.min.js" />
     <None Include="Web.Debug.config">
